Renaming scene functionality.

--- a/code/src/imgui.ini
+++ b/code/src/imgui.ini
@@ -70,7 +70,7 @@ Collapsed=0
 
 [Window][Debug Overlay]
 Pos=20,12
-Size=346,165
+Size=353,165
 Collapsed=0
 
 [Window][Hierarchy]
@@ -110,6 +110,31 @@ Collapsed=0
 
 [Window][Utility Buttons]
 Pos=24,450
-Size=116,118
+Size=116,147
+Collapsed=0
+
+[Window][DefaultText]
+Pos=29,183
+Size=335,185
+Collapsed=0
+
+[Window][Rename scene?]
+Pos=60,60
+Size=138,104
+Collapsed=0
+
+[Window][Rename Scene]
+Pos=701,411
+Size=298,77
+Collapsed=0
+
+[Window][NewScene]
+Pos=29,188
+Size=308,172
+Collapsed=0
+
+[Window][Hello, world!]
+Pos=60,60
+Size=107,82
 Collapsed=0
 
