--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,6 +41,7 @@ add_executable (engine
   fish_utils.cpp
   fish_json_handler.h
   fish_json_handler.cpp
+  fish_components.h
   nlohmann_json.h
   nlohmann_json_fwd.h
   tiny_obj_loader.h
